--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <input type="text" placeholder="Search the web" autofocus />
         </div>
         <div id="bookmarks">
-          <!-- Bookmarks will get inserted here! -->
+        <a href="https://www.youtube.com/"
         </div>
       </main>
     </div>
